AR-6 Create docker compose for all elements, downgrade java 17 -> 11